# bookRag

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: library.json
src/: main.py
src/features/admin/: __init__.py  ingest_service.py  ui.py
src/features/chat/: rag_service.py  ui.py
